--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
         <item>Arabic</item>
         <item>German</item>
     </string-array>
+
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+
 </resources>
