--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,9 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_navigation_menu2">navigation_menu2</string>
 
+
+    <!-- Base url (server address) used to fetch network resources -->
+    <string name="server_address">192.168.1.101</string>
+
+
 </resources>
