Fix bugs preventing data from being sent to server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
 
 
     <!-- Base url (server address) used to fetch network resources -->
-    <string name="server_address">192.168.1.101</string>
+    <string name="server_address">http://192.168.1.101</string>
 
 
 </resources>
